--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <div id="main" style="text-align:center;font-size:30;">
 	<H1>TRILHA DE PROGRAMAÇÃO</H1>
 	<div id="open">
-		<a id="day_challenge" href="open_003.html">Desafio do dia</a><br>
+<!--		<a id="day_challenge" href="open_004.html">Desafio do dia</a><br> -->
+		<a href="open_003.html">Aula 13/03/2024</a><br>
 		<a href="open_003.html">Desafio 06/03/2024</a><br>
 		<a href="open_002.html">Desafio 28/02/2024</a><br>
 		<a href="open_001.html">Desafio 21/02/2024</a><br>
@@ -45,6 +46,7 @@
 		28/02/2024 - <a href="aula2.html">aula2.html</a> <a href="aula2.js">aula2.js</a> <a href="aula2.css">aula2.css</a><br>
 		06/03/2024 - <a href="aula3.html">aula3.html</a> <a href="aula3.js">aula3.js</a> <a href="aula3.css">aula3.css</a><br>
 		19/03/2024 - <a href="calc.html">calc.html</a> <a href="calc.js">calc.js</a> <a href="calc.css">calc.css</a><br>
+		16/04/2024 - <a href="gitvsc.html">GIT e Visual Studio Code</a><br>
 	</div>
 </div>
 
