--- a/gitvsc.html
+++ b/gitvsc.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>GIT e Visual Studio Code</title>
         <link rel="stylesheet" href="css/eipgstyle.css">
+        <script type="text/javascript" src="js/eipgfunc.js"></script>
     </head>
     <body>
         <h1 align="center">Usando o GIT e o Visual Studio Code Passo a Passo</h1>
@@ -20,7 +21,7 @@
                     <h1>Visual Studio Code é uma ferramenta de edição de código fonte.</h1>
                 </div>
             </div>
-            <button class="button">Iniciar</button>
+            <button class="button" onclick=openpage("gv_page1.html")>Iniciar</button>
         </div>
     </body>
 </html>
